# wasm-sign

./: Cargo.toml  Makefile  README.md
res/: transform.wasm
src/: main.rs
wasm-sign/: Cargo.toml  Makefile  README.md
wasm-sign/src/: lib.rs
