[package]
name = "wasm-sign-cli"
version = "0.2.0"
authors = ["Frank Rehberger <frehberg@gmail.com>"]
description = "WebAssembly module signing and verification tool to proof authenticity and integrity of WebAssembly bytecodes. The signature is attached as Custom-Section to the end of th module. The signed module can be transmitted over network. Recipients parsing the signed module will 'see' an additional Custom-Section of type 0 and name 'signature'. The Signature adds an overhead of 118 bytes."

[[bin]]
name = "wasm-sign"
path = "src/main.rs"

license = "Apache-2.0"
readme = "README.md"
keywords = ["webasm", "security", "signature"]
documentation = "https://github.com/frehberg/wasm-sign"
homepage = "https://github.com/frehberg/wasm-sign"
repository = "https://github.com/frehberg/wasm-sign"

[dependencies]
env_logger = { version = "0.5", default-features = false }
getopts = "0.2"
parity-wasm = "0.24.1"
wasm-sign = { path = "wasm-sign", version = "0.2" }
log = "0.4"
base64 = "0.9"

# requires libssl-dev being installed
# on debian do
# sudo apt-get install pkg-config libssl-dev
# If you want to use non-default installation, set the
# environment variable
#  OPENSSL_DIR=<location>
openssl = "0.10.3"
